<resources>
    <string name="app_name">Help</string>
    <string name="FAQ">FAQ</string>
    <string name="general">General</string>
    <string name="food_beverage"><![CDATA[Food & Beverage]]></string>
    <string name="rating">Rating</string>
    <string name="feedback">Feedback</string>
    <string name="u">This category is for viewing by all walks of life without  age limit. The film potrays good values, decency  and positive lessons as well as entertaining.</string>
    <string name="p13">Viewers under 13 years of age need parental/guardian  supervision while viewing. Scenes in the film consists  elements of horror; scary; negative acts; suspense  and frantic elements, but not excessive; elusive  storyline; and elements that can disturb a child’s emotion.</string>
    <string name="p18">This category is for viewers aged 18 and above. The film  contains elements of horror, gory, and violent, but not  excessive; adult scene that is not excessive; social,  sensitive political and religious elements which require  a high level understanding.</string>
    <string name="cancel">Cancellation and Refunds</string>
    <string name="q1">How can I apply to refund</string>
    <string name="a1">Customers can apply for refunds under these  circumstances: Issues pertaining to the cinemas facilities  (e.g. air conditioning, seats, hall, lighting,  electrical and/or plumbing). Issues pertaining to projection equipment  (e.g. session breakdown, sound system  and/or subpar visual quality).</string>
    <string name="q2">Outside Food Policy</string>
    <string name="outside">Can I bring outside food into GWS</string>
    <string name="a2">"Customers are required to purchase food and  beverage from TGV Cinemas' snack bars. Food purchased outside of TGV Cinemas premises  will not be allowed in the cinema/movie halls. Customers can place their outside food and  beverage at the ticket tearing point before  entering the cinema/movie halls.  "</string>
    <string name="fq1"><![CDATA[How I know if I have successfully pre-booked my F&B order]]></string>
    <string name="fa1"><![CDATA[Upon completing payment, you will receive an email from us. The order details will be listed under the F&B  section of the email.]]></string>
    <string name="fq2">Can I change the popcorn and drink flavour after payment?</string>
    <string name="fa2">No, you cannot.Any changes should be made prior to completing  payment.</string>
    <string name="Feedback">"If FAQ do not have help you solve the problem Please comment below "</string>
    <string name="FeedbackTopic">Feedback:</string>

</resources>